<resources>
	<string name="app_name">WhatsPopIn</string>
	<string name="action_settings">Settings</string>
	<string name="event_name">Event Name</string>
	<string name="location">Location</string>
	<string name="category">Category</string>
	<string name="description">Description</string>
	<string name="done">Done</string>
	<string name="username">Username</string>
	<string name="password">Password</string>
	<string name="confirm_password">Confirm Password</string>
	<string name="register">Register</string>
	<string name="login">Login</string>
	<string name="or">Or</string>
	<string name="loggedIn">You have to logged in to access that function</string>
	<string name="email">Email</string>
	<string-array name="catories">
		<item>Concert</item>
		<item>Get together</item>
		<item>Party</item>
		<item>Theater</item>
		<item>Sports</item>

	</string-array>
	<string name="titleCont">Your PopIns</string>
	<string name="mainTitle">What\'s PopIn\'</string>
	<string name="popin">PopIn</string>
	<string name="titleEvent">Placeholder</string>
	<string name="upload_photo">Upload Photo</string>
	<string name="pick_date">Pick Date</string>
	<string name="api_key">AIzaSyB-7C-gRS73G6y7lHgddgxSnGmqQ8mrMZA</string>
</resources>
