<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="match_parent"
	android:layout_height="match_parent">

	<TextView
		android:id="@+id/textView"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text="@string/event_name" />

	<EditText
		android:id="@+id/editText"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:ems="10"
		android:inputType="textPersonName" />

	<TextView
		android:id="@+id/textView2"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text="@string/location" />

	<EditText
		android:id="@+id/editText2"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:ems="10"
		android:inputType="textPersonName" />

	<TextView
		android:id="@+id/textView3"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text="@string/category" />

	<EditText
		android:id="@+id/editText3"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:ems="10"
		android:inputType="textPersonName" />

	<TextView
		android:id="@+id/textView4"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text="@string/description" />

	<EditText
		android:id="@+id/editText4"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:ems="10"
		android:inputType="textPersonName" />

	<CalendarView
		android:id="@+id/calendarView"
		android:layout_width="match_parent"
		android:layout_height="306dp" />

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:orientation="horizontal">

		<Button
			android:id="@+id/button3"
			android:layout_width="189dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:text="Upload Photo" />

		<Button
			android:id="@+id/button"
			android:layout_width="189dp"
			android:layout_height="wrap_content"
			android:text="@string/done" />
	</LinearLayout>

</LinearLayout>