<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:gravity="center"
	android:orientation="vertical"
	android:background="@drawable/gradient_bg"
	>

	<ImageView
		android:id="@+id/imageView"
		android:layout_width="200dp"
		android:layout_height="150dp"
		android:src="@drawable/icon" />


	<TextView
		android:id="@+id/textView5"
		android:layout_width="200dp"
		android:layout_height="wrap_content"
		android:paddingTop="20dp"
		android:text="@string/email" />

	<EditText
		android:id="@+id/EmailText"
		android:layout_width="200dp"
		android:layout_height="40dp"
		android:ems="10"
		android:inputType="textPersonName" >

		<requestFocus />
	</EditText>


	<TextView
		android:id="@+id/textView6"
		android:layout_width="200dp"
		android:layout_height="wrap_content"
		android:text="@string/password" />

	<EditText
		android:id="@+id/passwordText"
		android:layout_width="200dp"
		android:layout_height="wrap_content"
		android:ems="10"
		android:inputType="textPassword" />


	<TextView
		android:id="@+id/textView"
		android:layout_width="200dp"
		android:layout_height="wrap_content"
		android:text="@string/confirm_password" />

	<EditText
		android:id="@+id/passwordConfirm"
		android:layout_width="200dp"
		android:layout_height="wrap_content"
		android:ems="10"
		android:inputType="textPassword" />

	<Space
		android:layout_width="match_parent"
		android:layout_height="42dp" />

	<Button
		android:id="@+id/register_button"
		android:layout_width="100dp"
		android:layout_height="40dp"
		android:background="@drawable/button_bg"
		android:backgroundTint="#000000"
		android:text="@string/register" />

</LinearLayout>